# astropy-sustainability

./: .gitignore  Astropy-citations.html  Astropy-commit-statistics.html  Fulltext-software-mentions.html  README.md  README.rst  setup.cfg
.github/workflows/: run.yml
_static/: index.html
astropy_sustainability/: __init__.py  ads_helpers.py  git_helpers.py
notebooks/: Astropy-citations.ipynb  Astropy-commit-statistics.ipynb  Fulltext-software-mentions.ipynb  nbs.mplstyle
scripts/: astropy-citations-per-month.py  make_gitstats.py  query_ads.py
