[metadata]
name = astropy_sustainability
description = Astropy sustainability dashboard
long_description = file: README.rst
author = adrn
author_email = adrianmpw@gmail.com
url = https://github.com/adrn/astropy-sustainability
license = MIT

[options]
zip_safe = False
packages = find:
install_requires =
    numpy
    astropy>=3.2
    pandas
    ads
    jupyter
    notebook
