[metadata]
name = astropy_sustainability
description = Astropy sustainability dashboard
long_description = file: README.rst
author = adrn
author_email = adrianmpw@gmail.com
url = https://github.com/adrn/astropy-sustainability
license = MIT

[options]
zip_safe = False
packages = find:
install_requires =
    ads
    astropy>=3.2
    jupyter
    matplotlib
    notebook
    numpy
    pandas
